Drawer Layout Content Added

--- a/src/App.css
+++ b/src/App.css
@@ -38,3 +38,12 @@ body {
   font-weight: 500;
   font-family: 'Libre Baskerville';
 }
+
+.label-news-categories {
+  padding-left: 18px;
+  height: 4.1rem;
+  color: #ffffff;
+  background-color: #111111;
+  display: flex;
+  align-items: center;
+}
