Styling changed in Drawer Layout

--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,7 @@ body {
   padding-left: 18px;
   height: 4.1rem;
   color: #ffffff;
+  font-size: 1.25rem;
   background-color: #111111;
   display: flex;
   align-items: center;
