--- a/src/App.css
+++ b/src/App.css
@@ -58,6 +58,7 @@ body {
 .news-card {
   width: 100%;
   display: flex;
+  margin-top: 20px;
   flex-direction: row;
   box-shadow: 0px 1px 8px #5a5a5a;
   padding: 10px 30px 10px 10px;
@@ -81,7 +82,7 @@ body {
 
 .news-title {
   color: #222222;
-  font-size: 1.4rem;
+  font-size: 1.3rem;
   font-weight: 300;
 }
 
@@ -95,7 +96,7 @@ body {
 .news-description {
   margin-top: 10px;
   color: #333333;
-  font-size: 1rem;
+  font-size: 0.95rem;
   font-weight: 300;
 }
 
