--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,7 @@ body {
   margin-right: 20px;
   justify-content: center;
   align-items: center;
-  font-size: 2rem;
+  font-size: 3.5vh;
   font-weight: 500;
   font-family: 'Libre Baskerville';
 }
@@ -141,9 +141,9 @@ body {
 .button-search-news {
   width: 2.7rem;
   height: 100%;
-  border: 1px solid #ffffff;
-  border-radius: 5px;
-  background-color: #2b0996;
+  border: none;
+  border-radius: 0px;
+  background-color: #ff6842;
   color: #ffffff;
 }
 
@@ -169,4 +169,28 @@ body {
 
 .button-blend-more-news:hover {
   background-color: #222222;
+}
+
+@media (max-width: 800px) {
+
+  .news-container {
+    width: 90%;
+    margin: 20px auto;
+  }
+
+  .news-card {
+    flex-direction: column;
+  }
+  
+  
+  .news-img img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 2px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+  
+ 
 }
